--- a/force-app/main/default/classes/SPTriggerHandler.cls
+++ b/force-app/main/default/classes/SPTriggerHandler.cls
@@ -3,7 +3,9 @@ public class SPTriggerHandler {
     //parameter: List<SP> newly created salesforce project records.
         //If we are insert 50 project, we have to create corresponding 50 tickets. 1 for each Project.
     public static void createDefaultTicket(list<salesforce_project__c> spTriggerNew) {
-        //create list of ticket so create bulk records
+        
+        
+        try{//create list of ticket so create bulk records
         List<Salesforce_Ticket__c> listST = new List<Salesforce_Ticket__c>();
 
         for (Salesforce_Project__c newSP : spTriggerNew) {
@@ -13,6 +15,17 @@ public class SPTriggerHandler {
             listST.add(st);
         }
         insert listST;
+        
+        }catch (Exception ex){
+
+            for(salesforce_project__c newSP: spTriggerNew){
+
+                newSP.addError('Default ticket creation failed. Contact your Administrator , not Developer!');
+
+
+            }
+
+        }
     }
 
     public static void validate1(list<salesforce_project__c> spTriggerNew, list<salesforce_project__c> spTriggerOld, Map<id, salesforce_project__c> spTriggerNewMap,Map<id, salesforce_project__c> spTriggerOldMap) {
