--- a/force-app/main/default/classes/SPTriggerHandler.cls
+++ b/force-app/main/default/classes/SPTriggerHandler.cls
@@ -8,9 +8,18 @@ public class SPTriggerHandler {
         try{//create list of ticket so create bulk records
         List<Salesforce_Ticket__c> listST = new List<Salesforce_Ticket__c>();
 
+        //how to access hierarchy custom setting org level defaul value in apex?
+
+        DefaultTicketInfo__c dt = DefaultTicketInfo__c.getOrgDefaults();
+        system.debug('dt :'+ dt);
+
         for (Salesforce_Project__c newSP : spTriggerNew) {
             Salesforce_Ticket__c st = new Salesforce_Ticket__c();
-            st.Subject__c = 'Default ST';
+            
+            st.Subject__c = dt.subject__c;
+            st.description__c = dt.description__c;
+            st.priority__c = dt.priority__c;
+
             st.Salesforce_Project__c = newSP.Id;//relationship field
             listST.add(st);
         }
